y.output
State 52 conflicts: 3 shift/reduce
State 55 conflicts: 3 shift/reduce
State 56 conflicts: 5 shift/reduce
State 64 conflicts: 3 shift/reduce
State 97 conflicts: 11 shift/reduce
State 119 conflicts: 11 shift/reduce
State 120 conflicts: 11 shift/reduce
State 121 conflicts: 11 shift/reduce
State 122 conflicts: 11 shift/reduce
State 123 conflicts: 11 shift/reduce
State 124 conflicts: 11 shift/reduce
State 125 conflicts: 11 shift/reduce
State 126 conflicts: 11 shift/reduce
State 127 conflicts: 11 shift/reduce


Grammar

    0 $accept: Goal $end

    1 Goal: MainClass ClassDeclaration END

    2 MainClass: CLASS Identifier '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' Identifier ')' '{' Statement '}' '}'

    3 ClassDeclaration: CLASS Identifier '{' VarDeclaration MethodDeclaration '}'
    4                 | CLASS Identifier EXTENDS Identifier '{' VarDeclaration MethodDeclaration '}'

    5 VarDeclaration: VarDeclaration Type Identifier ';'
    6               | Type Identifier ';'

    7 MethodDeclaration: MethodDeclaration PUBLIC Type Identifier '(' MethodArgumentDeclaration ')' '{' MethodVarDeclaration MethodStatementDeclaration RETURN Expression ';' '}'
    8                  | %empty

    9 MethodArgumentDeclaration: Type Identifier
   10                          | MethodArgumentDeclaration ',' Type Identifier
   11                          | %empty

   12 MethodVarDeclaration: MethodVarDeclaration VarDeclaration
   13                     | VarDeclaration
   14                     | %empty

   15 MethodStatementDeclaration: MethodStatementDeclaration Statement
   16                           | Statement
   17                           | %empty

   18 Type: T_Int '[' ']'
   19     | T_Bool
   20     | T_Int
   21     | Identifier

   22 Statement: '{' Statement Statement '}'
   23          | '{' Statement '}'
   24          | IF '(' Expression ')' Statement ELSE Statement
   25          | WHILE '(' Expression ')' Statement
   26          | SYS_PRINTLN '(' Expression ')' ';'
   27          | Identifier '=' Expression ';'
   28          | Identifier '[' Expression ']' '=' Expression ';'

   29 Expression: Expression AND Expression
   30           | Expression OR Expression
   31           | Expression LT Expression
   32           | Expression GT Expression
   33           | Expression EQ Expression
   34           | Expression PLUSOP Expression
   35           | Expression MINOP Expression
   36           | Expression MULOP Expression
   37           | Expression DIVOP Expression
   38           | Expression '[' Expression ']'
   39           | Expression '.' LENGTH
   40           | Expression '.' Identifier '(' ')'
   41           | INTEGER_LITERAL
   42           | T_True
   43           | T_False
   44           | Identifier
   45           | THIS
   46           | NEW T_Int '[' Expression ']'
   47           | NEW Identifier '(' FunctionCallDeclaration ')'
   48           | '!' Expression
   49           | '(' Expression ')'

   50 FunctionCallDeclaration: FunctionCallDeclaration ',' Expression
   51                        | Expression
   52                        | %empty

   53 Identifier: IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 48
    '(' (40) 2 7 24 25 26 40 47 49
    ')' (41) 2 7 24 25 26 40 47 49
    ',' (44) 10 50
    '.' (46) 39 40
    ';' (59) 5 6 7 26 27 28
    '=' (61) 27 28
    '[' (91) 2 18 28 38 46
    ']' (93) 2 18 28 38 46
    '{' (123) 2 3 4 7 22 23
    '}' (125) 2 3 4 7 22 23
    error (256)
    INTEGER_LITERAL (258) 41
    IDENTIFIER (259) 53
    END (260) 1
    CLASS (261) 2 3 4
    PUBLIC (262) 2 7
    STATIC (263) 2
    VOID (264) 2
    MAIN (265) 2
    EXTENDS (266) 4
    STRING (267) 2
    RETURN (268) 7
    LENGTH (269) 39
    IF (270) 24
    ELSE (271) 24
    WHILE (272) 25
    SYS_PRINTLN (273) 26
    T_Int (274) 18 20 46
    T_Bool (275) 19
    T_True (276) 42
    T_False (277) 43
    PLUSOP (278) 34
    MINOP (279) 35
    MULOP (280) 36
    DIVOP (281) 37
    AND (282) 29
    OR (283) 30
    EQ (284) 33
    LT (285) 31
    GT (286) 32
    THIS (287) 45
    NEW (288) 46 47


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    Goal (46)
        on left: 1
        on right: 0
    MainClass (47)
        on left: 2
        on right: 1
    ClassDeclaration (48)
        on left: 3 4
        on right: 1
    VarDeclaration (49)
        on left: 5 6
        on right: 3 4 5 12 13
    MethodDeclaration (50)
        on left: 7 8
        on right: 3 4 7
    MethodArgumentDeclaration (51)
        on left: 9 10 11
        on right: 7 10
    MethodVarDeclaration (52)
        on left: 12 13 14
        on right: 7 12
    MethodStatementDeclaration (53)
        on left: 15 16 17
        on right: 7 15
    Type (54)
        on left: 18 19 20 21
        on right: 5 6 7 9 10
    Statement (55)
        on left: 22 23 24 25 26 27 28
        on right: 2 15 16 22 23 24 25
    Expression (56)
        on left: 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
        on right: 7 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 46 48 49 50 51
    FunctionCallDeclaration (57)
        on left: 50 51 52
        on right: 47 50
    Identifier (58)
        on left: 53
        on right: 2 3 4 5 6 7 9 10 21 27 28 40 44 47


State 0

    0 $accept: . Goal $end

    CLASS  shift, and go to state 1

    Goal       go to state 2
    MainClass  go to state 3


State 1

    2 MainClass: CLASS . Identifier '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' Identifier ')' '{' Statement '}' '}'

    IDENTIFIER  shift, and go to state 4

    Identifier  go to state 5


State 2

    0 $accept: Goal . $end

    $end  shift, and go to state 6


State 3

    1 Goal: MainClass . ClassDeclaration END

    CLASS  shift, and go to state 7

    ClassDeclaration  go to state 8


State 4

   53 Identifier: IDENTIFIER .

    $default  reduce using rule 53 (Identifier)


State 5

    2 MainClass: CLASS Identifier . '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' Identifier ')' '{' Statement '}' '}'

    '{'  shift, and go to state 9


State 6

    0 $accept: Goal $end .

    $default  accept


State 7

    3 ClassDeclaration: CLASS . Identifier '{' VarDeclaration MethodDeclaration '}'
    4                 | CLASS . Identifier EXTENDS Identifier '{' VarDeclaration MethodDeclaration '}'

    IDENTIFIER  shift, and go to state 4

    Identifier  go to state 10


State 8

    1 Goal: MainClass ClassDeclaration . END

    END  shift, and go to state 11


State 9

    2 MainClass: CLASS Identifier '{' . PUBLIC STATIC VOID MAIN '(' STRING '[' ']' Identifier ')' '{' Statement '}' '}'

    PUBLIC  shift, and go to state 12


State 10

    3 ClassDeclaration: CLASS Identifier . '{' VarDeclaration MethodDeclaration '}'
    4                 | CLASS Identifier . EXTENDS Identifier '{' VarDeclaration MethodDeclaration '}'

    EXTENDS  shift, and go to state 13
    '{'      shift, and go to state 14


State 11

    1 Goal: MainClass ClassDeclaration END .

    $default  reduce using rule 1 (Goal)


State 12

    2 MainClass: CLASS Identifier '{' PUBLIC . STATIC VOID MAIN '(' STRING '[' ']' Identifier ')' '{' Statement '}' '}'

    STATIC  shift, and go to state 15


State 13

    4 ClassDeclaration: CLASS Identifier EXTENDS . Identifier '{' VarDeclaration MethodDeclaration '}'

    IDENTIFIER  shift, and go to state 4

    Identifier  go to state 16


State 14

    3 ClassDeclaration: CLASS Identifier '{' . VarDeclaration MethodDeclaration '}'

    IDENTIFIER  shift, and go to state 4
    T_Int       shift, and go to state 17
    T_Bool      shift, and go to state 18

    VarDeclaration  go to state 19
    Type            go to state 20
    Identifier      go to state 21


State 15

    2 MainClass: CLASS Identifier '{' PUBLIC STATIC . VOID MAIN '(' STRING '[' ']' Identifier ')' '{' Statement '}' '}'

    VOID  shift, and go to state 22


State 16

    4 ClassDeclaration: CLASS Identifier EXTENDS Identifier . '{' VarDeclaration MethodDeclaration '}'

    '{'  shift, and go to state 23


State 17

   18 Type: T_Int . '[' ']'
   20     | T_Int .

    '['  shift, and go to state 24

    $default  reduce using rule 20 (Type)


State 18

   19 Type: T_Bool .

    $default  reduce using rule 19 (Type)


State 19

    3 ClassDeclaration: CLASS Identifier '{' VarDeclaration . MethodDeclaration '}'
    5 VarDeclaration: VarDeclaration . Type Identifier ';'

    IDENTIFIER  shift, and go to state 4
    T_Int       shift, and go to state 17
    T_Bool      shift, and go to state 18

    $default  reduce using rule 8 (MethodDeclaration)

    MethodDeclaration  go to state 25
    Type               go to state 26
    Identifier         go to state 21


State 20

    6 VarDeclaration: Type . Identifier ';'

    IDENTIFIER  shift, and go to state 4

    Identifier  go to state 27


State 21

   21 Type: Identifier .

    $default  reduce using rule 21 (Type)


State 22

    2 MainClass: CLASS Identifier '{' PUBLIC STATIC VOID . MAIN '(' STRING '[' ']' Identifier ')' '{' Statement '}' '}'

    MAIN  shift, and go to state 28


State 23

    4 ClassDeclaration: CLASS Identifier EXTENDS Identifier '{' . VarDeclaration MethodDeclaration '}'

    IDENTIFIER  shift, and go to state 4
    T_Int       shift, and go to state 17
    T_Bool      shift, and go to state 18

    VarDeclaration  go to state 29
    Type            go to state 20
    Identifier      go to state 21


State 24

   18 Type: T_Int '[' . ']'

    ']'  shift, and go to state 30


State 25

    3 ClassDeclaration: CLASS Identifier '{' VarDeclaration MethodDeclaration . '}'
    7 MethodDeclaration: MethodDeclaration . PUBLIC Type Identifier '(' MethodArgumentDeclaration ')' '{' MethodVarDeclaration MethodStatementDeclaration RETURN Expression ';' '}'

    PUBLIC  shift, and go to state 31
    '}'     shift, and go to state 32


State 26

    5 VarDeclaration: VarDeclaration Type . Identifier ';'

    IDENTIFIER  shift, and go to state 4

    Identifier  go to state 33


State 27

    6 VarDeclaration: Type Identifier . ';'

    ';'  shift, and go to state 34


State 28

    2 MainClass: CLASS Identifier '{' PUBLIC STATIC VOID MAIN . '(' STRING '[' ']' Identifier ')' '{' Statement '}' '}'

    '('  shift, and go to state 35


State 29

    4 ClassDeclaration: CLASS Identifier EXTENDS Identifier '{' VarDeclaration . MethodDeclaration '}'
    5 VarDeclaration: VarDeclaration . Type Identifier ';'

    IDENTIFIER  shift, and go to state 4
    T_Int       shift, and go to state 17
    T_Bool      shift, and go to state 18

    $default  reduce using rule 8 (MethodDeclaration)

    MethodDeclaration  go to state 36
    Type               go to state 26
    Identifier         go to state 21


State 30

   18 Type: T_Int '[' ']' .

    $default  reduce using rule 18 (Type)


State 31

    7 MethodDeclaration: MethodDeclaration PUBLIC . Type Identifier '(' MethodArgumentDeclaration ')' '{' MethodVarDeclaration MethodStatementDeclaration RETURN Expression ';' '}'

    IDENTIFIER  shift, and go to state 4
    T_Int       shift, and go to state 17
    T_Bool      shift, and go to state 18

    Type        go to state 37
    Identifier  go to state 21


State 32

    3 ClassDeclaration: CLASS Identifier '{' VarDeclaration MethodDeclaration '}' .

    $default  reduce using rule 3 (ClassDeclaration)


State 33

    5 VarDeclaration: VarDeclaration Type Identifier . ';'

    ';'  shift, and go to state 38


State 34

    6 VarDeclaration: Type Identifier ';' .

    $default  reduce using rule 6 (VarDeclaration)


State 35

    2 MainClass: CLASS Identifier '{' PUBLIC STATIC VOID MAIN '(' . STRING '[' ']' Identifier ')' '{' Statement '}' '}'

    STRING  shift, and go to state 39


State 36

    4 ClassDeclaration: CLASS Identifier EXTENDS Identifier '{' VarDeclaration MethodDeclaration . '}'
    7 MethodDeclaration: MethodDeclaration . PUBLIC Type Identifier '(' MethodArgumentDeclaration ')' '{' MethodVarDeclaration MethodStatementDeclaration RETURN Expression ';' '}'

    PUBLIC  shift, and go to state 31
    '}'     shift, and go to state 40


State 37

    7 MethodDeclaration: MethodDeclaration PUBLIC Type . Identifier '(' MethodArgumentDeclaration ')' '{' MethodVarDeclaration MethodStatementDeclaration RETURN Expression ';' '}'

    IDENTIFIER  shift, and go to state 4

    Identifier  go to state 41


State 38

    5 VarDeclaration: VarDeclaration Type Identifier ';' .

    $default  reduce using rule 5 (VarDeclaration)


State 39

    2 MainClass: CLASS Identifier '{' PUBLIC STATIC VOID MAIN '(' STRING . '[' ']' Identifier ')' '{' Statement '}' '}'

    '['  shift, and go to state 42


State 40

    4 ClassDeclaration: CLASS Identifier EXTENDS Identifier '{' VarDeclaration MethodDeclaration '}' .

    $default  reduce using rule 4 (ClassDeclaration)


State 41

    7 MethodDeclaration: MethodDeclaration PUBLIC Type Identifier . '(' MethodArgumentDeclaration ')' '{' MethodVarDeclaration MethodStatementDeclaration RETURN Expression ';' '}'

    '('  shift, and go to state 43


State 42

    2 MainClass: CLASS Identifier '{' PUBLIC STATIC VOID MAIN '(' STRING '[' . ']' Identifier ')' '{' Statement '}' '}'

    ']'  shift, and go to state 44


State 43

    7 MethodDeclaration: MethodDeclaration PUBLIC Type Identifier '(' . MethodArgumentDeclaration ')' '{' MethodVarDeclaration MethodStatementDeclaration RETURN Expression ';' '}'

    IDENTIFIER  shift, and go to state 4
    T_Int       shift, and go to state 17
    T_Bool      shift, and go to state 18

    $default  reduce using rule 11 (MethodArgumentDeclaration)

    MethodArgumentDeclaration  go to state 45
    Type                       go to state 46
    Identifier                 go to state 21


State 44

    2 MainClass: CLASS Identifier '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' . Identifier ')' '{' Statement '}' '}'

    IDENTIFIER  shift, and go to state 4

    Identifier  go to state 47


State 45

    7 MethodDeclaration: MethodDeclaration PUBLIC Type Identifier '(' MethodArgumentDeclaration . ')' '{' MethodVarDeclaration MethodStatementDeclaration RETURN Expression ';' '}'
   10 MethodArgumentDeclaration: MethodArgumentDeclaration . ',' Type Identifier

    ')'  shift, and go to state 48
    ','  shift, and go to state 49


State 46

    9 MethodArgumentDeclaration: Type . Identifier

    IDENTIFIER  shift, and go to state 4

    Identifier  go to state 50


State 47

    2 MainClass: CLASS Identifier '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' Identifier . ')' '{' Statement '}' '}'

    ')'  shift, and go to state 51


State 48

    7 MethodDeclaration: MethodDeclaration PUBLIC Type Identifier '(' MethodArgumentDeclaration ')' . '{' MethodVarDeclaration MethodStatementDeclaration RETURN Expression ';' '}'

    '{'  shift, and go to state 52


State 49

   10 MethodArgumentDeclaration: MethodArgumentDeclaration ',' . Type Identifier

    IDENTIFIER  shift, and go to state 4
    T_Int       shift, and go to state 17
    T_Bool      shift, and go to state 18

    Type        go to state 53
    Identifier  go to state 21


State 50

    9 MethodArgumentDeclaration: Type Identifier .

    $default  reduce using rule 9 (MethodArgumentDeclaration)


State 51

    2 MainClass: CLASS Identifier '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' Identifier ')' . '{' Statement '}' '}'

    '{'  shift, and go to state 54


State 52

    7 MethodDeclaration: MethodDeclaration PUBLIC Type Identifier '(' MethodArgumentDeclaration ')' '{' . MethodVarDeclaration MethodStatementDeclaration RETURN Expression ';' '}'

    IDENTIFIER  shift, and go to state 4
    T_Int       shift, and go to state 17
    T_Bool      shift, and go to state 18

    IDENTIFIER  [reduce using rule 14 (MethodVarDeclaration)]
    T_Int       [reduce using rule 14 (MethodVarDeclaration)]
    T_Bool      [reduce using rule 14 (MethodVarDeclaration)]
    $default    reduce using rule 14 (MethodVarDeclaration)

    VarDeclaration        go to state 55
    MethodVarDeclaration  go to state 56
    Type                  go to state 20
    Identifier            go to state 21


State 53

   10 MethodArgumentDeclaration: MethodArgumentDeclaration ',' Type . Identifier

    IDENTIFIER  shift, and go to state 4

    Identifier  go to state 57


State 54

    2 MainClass: CLASS Identifier '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' Identifier ')' '{' . Statement '}' '}'

    IDENTIFIER   shift, and go to state 4
    IF           shift, and go to state 58
    WHILE        shift, and go to state 59
    SYS_PRINTLN  shift, and go to state 60
    '{'          shift, and go to state 61

    Statement   go to state 62
    Identifier  go to state 63


State 55

    5 VarDeclaration: VarDeclaration . Type Identifier ';'
   13 MethodVarDeclaration: VarDeclaration .

    IDENTIFIER  shift, and go to state 4
    T_Int       shift, and go to state 17
    T_Bool      shift, and go to state 18

    IDENTIFIER  [reduce using rule 13 (MethodVarDeclaration)]
    T_Int       [reduce using rule 13 (MethodVarDeclaration)]
    T_Bool      [reduce using rule 13 (MethodVarDeclaration)]
    $default    reduce using rule 13 (MethodVarDeclaration)

    Type        go to state 26
    Identifier  go to state 21


State 56

    7 MethodDeclaration: MethodDeclaration PUBLIC Type Identifier '(' MethodArgumentDeclaration ')' '{' MethodVarDeclaration . MethodStatementDeclaration RETURN Expression ';' '}'
   12 MethodVarDeclaration: MethodVarDeclaration . VarDeclaration

    IDENTIFIER   shift, and go to state 4
    IF           shift, and go to state 58
    WHILE        shift, and go to state 59
    SYS_PRINTLN  shift, and go to state 60
    T_Int        shift, and go to state 17
    T_Bool       shift, and go to state 18
    '{'          shift, and go to state 61

    IDENTIFIER   [reduce using rule 17 (MethodStatementDeclaration)]
    IF           [reduce using rule 17 (MethodStatementDeclaration)]
    WHILE        [reduce using rule 17 (MethodStatementDeclaration)]
    SYS_PRINTLN  [reduce using rule 17 (MethodStatementDeclaration)]
    '{'          [reduce using rule 17 (MethodStatementDeclaration)]
    $default     reduce using rule 17 (MethodStatementDeclaration)

    VarDeclaration              go to state 64
    MethodStatementDeclaration  go to state 65
    Type                        go to state 20
    Statement                   go to state 66
    Identifier                  go to state 67


State 57

   10 MethodArgumentDeclaration: MethodArgumentDeclaration ',' Type Identifier .

    $default  reduce using rule 10 (MethodArgumentDeclaration)


State 58

   24 Statement: IF . '(' Expression ')' Statement ELSE Statement

    '('  shift, and go to state 68


State 59

   25 Statement: WHILE . '(' Expression ')' Statement

    '('  shift, and go to state 69


State 60

   26 Statement: SYS_PRINTLN . '(' Expression ')' ';'

    '('  shift, and go to state 70


State 61

   22 Statement: '{' . Statement Statement '}'
   23          | '{' . Statement '}'

    IDENTIFIER   shift, and go to state 4
    IF           shift, and go to state 58
    WHILE        shift, and go to state 59
    SYS_PRINTLN  shift, and go to state 60
    '{'          shift, and go to state 61

    Statement   go to state 71
    Identifier  go to state 63


State 62

    2 MainClass: CLASS Identifier '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' Identifier ')' '{' Statement . '}' '}'

    '}'  shift, and go to state 72


State 63

   27 Statement: Identifier . '=' Expression ';'
   28          | Identifier . '[' Expression ']' '=' Expression ';'

    '['  shift, and go to state 73
    '='  shift, and go to state 74


State 64

    5 VarDeclaration: VarDeclaration . Type Identifier ';'
   12 MethodVarDeclaration: MethodVarDeclaration VarDeclaration .

    IDENTIFIER  shift, and go to state 4
    T_Int       shift, and go to state 17
    T_Bool      shift, and go to state 18

    IDENTIFIER  [reduce using rule 12 (MethodVarDeclaration)]
    T_Int       [reduce using rule 12 (MethodVarDeclaration)]
    T_Bool      [reduce using rule 12 (MethodVarDeclaration)]
    $default    reduce using rule 12 (MethodVarDeclaration)

    Type        go to state 26
    Identifier  go to state 21


State 65

    7 MethodDeclaration: MethodDeclaration PUBLIC Type Identifier '(' MethodArgumentDeclaration ')' '{' MethodVarDeclaration MethodStatementDeclaration . RETURN Expression ';' '}'
   15 MethodStatementDeclaration: MethodStatementDeclaration . Statement

    IDENTIFIER   shift, and go to state 4
    RETURN       shift, and go to state 75
    IF           shift, and go to state 58
    WHILE        shift, and go to state 59
    SYS_PRINTLN  shift, and go to state 60
    '{'          shift, and go to state 61

    Statement   go to state 76
    Identifier  go to state 63


State 66

   16 MethodStatementDeclaration: Statement .

    $default  reduce using rule 16 (MethodStatementDeclaration)


State 67

   21 Type: Identifier .
   27 Statement: Identifier . '=' Expression ';'
   28          | Identifier . '[' Expression ']' '=' Expression ';'

    '['  shift, and go to state 73
    '='  shift, and go to state 74

    $default  reduce using rule 21 (Type)


State 68

   24 Statement: IF '(' . Expression ')' Statement ELSE Statement

    INTEGER_LITERAL  shift, and go to state 77
    IDENTIFIER       shift, and go to state 4
    T_True           shift, and go to state 78
    T_False          shift, and go to state 79
    THIS             shift, and go to state 80
    NEW              shift, and go to state 81
    '('              shift, and go to state 82
    '!'              shift, and go to state 83

    Expression  go to state 84
    Identifier  go to state 85


State 69

   25 Statement: WHILE '(' . Expression ')' Statement

    INTEGER_LITERAL  shift, and go to state 77
    IDENTIFIER       shift, and go to state 4
    T_True           shift, and go to state 78
    T_False          shift, and go to state 79
    THIS             shift, and go to state 80
    NEW              shift, and go to state 81
    '('              shift, and go to state 82
    '!'              shift, and go to state 83

    Expression  go to state 86
    Identifier  go to state 85


State 70

   26 Statement: SYS_PRINTLN '(' . Expression ')' ';'

    INTEGER_LITERAL  shift, and go to state 77
    IDENTIFIER       shift, and go to state 4
    T_True           shift, and go to state 78
    T_False          shift, and go to state 79
    THIS             shift, and go to state 80
    NEW              shift, and go to state 81
    '('              shift, and go to state 82
    '!'              shift, and go to state 83

    Expression  go to state 87
    Identifier  go to state 85


State 71

   22 Statement: '{' Statement . Statement '}'
   23          | '{' Statement . '}'

    IDENTIFIER   shift, and go to state 4
    IF           shift, and go to state 58
    WHILE        shift, and go to state 59
    SYS_PRINTLN  shift, and go to state 60
    '{'          shift, and go to state 61
    '}'          shift, and go to state 88

    Statement   go to state 89
    Identifier  go to state 63


State 72

    2 MainClass: CLASS Identifier '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' Identifier ')' '{' Statement '}' . '}'

    '}'  shift, and go to state 90


State 73

   28 Statement: Identifier '[' . Expression ']' '=' Expression ';'

    INTEGER_LITERAL  shift, and go to state 77
    IDENTIFIER       shift, and go to state 4
    T_True           shift, and go to state 78
    T_False          shift, and go to state 79
    THIS             shift, and go to state 80
    NEW              shift, and go to state 81
    '('              shift, and go to state 82
    '!'              shift, and go to state 83

    Expression  go to state 91
    Identifier  go to state 85


State 74

   27 Statement: Identifier '=' . Expression ';'

    INTEGER_LITERAL  shift, and go to state 77
    IDENTIFIER       shift, and go to state 4
    T_True           shift, and go to state 78
    T_False          shift, and go to state 79
    THIS             shift, and go to state 80
    NEW              shift, and go to state 81
    '('              shift, and go to state 82
    '!'              shift, and go to state 83

    Expression  go to state 92
    Identifier  go to state 85


State 75

    7 MethodDeclaration: MethodDeclaration PUBLIC Type Identifier '(' MethodArgumentDeclaration ')' '{' MethodVarDeclaration MethodStatementDeclaration RETURN . Expression ';' '}'

    INTEGER_LITERAL  shift, and go to state 77
    IDENTIFIER       shift, and go to state 4
    T_True           shift, and go to state 78
    T_False          shift, and go to state 79
    THIS             shift, and go to state 80
    NEW              shift, and go to state 81
    '('              shift, and go to state 82
    '!'              shift, and go to state 83

    Expression  go to state 93
    Identifier  go to state 85


State 76

   15 MethodStatementDeclaration: MethodStatementDeclaration Statement .

    $default  reduce using rule 15 (MethodStatementDeclaration)


State 77

   41 Expression: INTEGER_LITERAL .

    $default  reduce using rule 41 (Expression)


State 78

   42 Expression: T_True .

    $default  reduce using rule 42 (Expression)


State 79

   43 Expression: T_False .

    $default  reduce using rule 43 (Expression)


State 80

   45 Expression: THIS .

    $default  reduce using rule 45 (Expression)


State 81

   46 Expression: NEW . T_Int '[' Expression ']'
   47           | NEW . Identifier '(' FunctionCallDeclaration ')'

    IDENTIFIER  shift, and go to state 4
    T_Int       shift, and go to state 94

    Identifier  go to state 95


State 82

   49 Expression: '(' . Expression ')'

    INTEGER_LITERAL  shift, and go to state 77
    IDENTIFIER       shift, and go to state 4
    T_True           shift, and go to state 78
    T_False          shift, and go to state 79
    THIS             shift, and go to state 80
    NEW              shift, and go to state 81
    '('              shift, and go to state 82
    '!'              shift, and go to state 83

    Expression  go to state 96
    Identifier  go to state 85


State 83

   48 Expression: '!' . Expression

    INTEGER_LITERAL  shift, and go to state 77
    IDENTIFIER       shift, and go to state 4
    T_True           shift, and go to state 78
    T_False          shift, and go to state 79
    THIS             shift, and go to state 80
    NEW              shift, and go to state 81
    '('              shift, and go to state 82
    '!'              shift, and go to state 83

    Expression  go to state 97
    Identifier  go to state 85


State 84

   24 Statement: IF '(' Expression . ')' Statement ELSE Statement
   29 Expression: Expression . AND Expression
   30           | Expression . OR Expression
   31           | Expression . LT Expression
   32           | Expression . GT Expression
   33           | Expression . EQ Expression
   34           | Expression . PLUSOP Expression
   35           | Expression . MINOP Expression
   36           | Expression . MULOP Expression
   37           | Expression . DIVOP Expression
   38           | Expression . '[' Expression ']'
   39           | Expression . '.' LENGTH
   40           | Expression . '.' Identifier '(' ')'

    PLUSOP  shift, and go to state 98
    MINOP   shift, and go to state 99
    MULOP   shift, and go to state 100
    DIVOP   shift, and go to state 101
    AND     shift, and go to state 102
    OR      shift, and go to state 103
    EQ      shift, and go to state 104
    LT      shift, and go to state 105
    GT      shift, and go to state 106
    '['     shift, and go to state 107
    ')'     shift, and go to state 108
    '.'     shift, and go to state 109


State 85

   44 Expression: Identifier .

    $default  reduce using rule 44 (Expression)


State 86

   25 Statement: WHILE '(' Expression . ')' Statement
   29 Expression: Expression . AND Expression
   30           | Expression . OR Expression
   31           | Expression . LT Expression
   32           | Expression . GT Expression
   33           | Expression . EQ Expression
   34           | Expression . PLUSOP Expression
   35           | Expression . MINOP Expression
   36           | Expression . MULOP Expression
   37           | Expression . DIVOP Expression
   38           | Expression . '[' Expression ']'
   39           | Expression . '.' LENGTH
   40           | Expression . '.' Identifier '(' ')'

    PLUSOP  shift, and go to state 98
    MINOP   shift, and go to state 99
    MULOP   shift, and go to state 100
    DIVOP   shift, and go to state 101
    AND     shift, and go to state 102
    OR      shift, and go to state 103
    EQ      shift, and go to state 104
    LT      shift, and go to state 105
    GT      shift, and go to state 106
    '['     shift, and go to state 107
    ')'     shift, and go to state 110
    '.'     shift, and go to state 109


State 87

   26 Statement: SYS_PRINTLN '(' Expression . ')' ';'
   29 Expression: Expression . AND Expression
   30           | Expression . OR Expression
   31           | Expression . LT Expression
   32           | Expression . GT Expression
   33           | Expression . EQ Expression
   34           | Expression . PLUSOP Expression
   35           | Expression . MINOP Expression
   36           | Expression . MULOP Expression
   37           | Expression . DIVOP Expression
   38           | Expression . '[' Expression ']'
   39           | Expression . '.' LENGTH
   40           | Expression . '.' Identifier '(' ')'

    PLUSOP  shift, and go to state 98
    MINOP   shift, and go to state 99
    MULOP   shift, and go to state 100
    DIVOP   shift, and go to state 101
    AND     shift, and go to state 102
    OR      shift, and go to state 103
    EQ      shift, and go to state 104
    LT      shift, and go to state 105
    GT      shift, and go to state 106
    '['     shift, and go to state 107
    ')'     shift, and go to state 111
    '.'     shift, and go to state 109


State 88

   23 Statement: '{' Statement '}' .

    $default  reduce using rule 23 (Statement)


State 89

   22 Statement: '{' Statement Statement . '}'

    '}'  shift, and go to state 112


State 90

    2 MainClass: CLASS Identifier '{' PUBLIC STATIC VOID MAIN '(' STRING '[' ']' Identifier ')' '{' Statement '}' '}' .

    $default  reduce using rule 2 (MainClass)


State 91
